v1.0/需求表.md
# Power Sequence Generator 需求表

> 請直接在此檔案修改需求，修改後可依此進行開發。

---

## 一、系統概述

| 項目 | 說明 |
|------|------|
| 系統名稱 | Power Sequence Generator |
| 目的 | 依規格自動產生 Power Sequence 的 Verilog 模組 |
| 核心元件 | PSEQCELL.v（單階 sequence 控制） |
| 輸出格式 | Verilog（參考 x15_pseq.v 風格） |

---

## 二、功能需求

### 2.1 GUI 功能

| 編號 | 需求描述 | 優先級 | 狀態 |
|------|----------|--------|------|
| F-GUI-01 | 以 Python GUI 設定 power sequence 規格 | 高 | 已實作 |
| F-GUI-02 | 新增 / 刪除 / 編輯 sequence 節點 | 高 | 已實作 |
| F-GUI-03 | 載入 / 儲存 JSON 設定檔 | 高 | 已實作 |
| F-GUI-04 | 產生 Verilog 檔 | 高 | 已實作 |
| F-GUI-05 | 新增節點時保留既有節點已編輯的值 | 高 | 已實作 |
| F-GUI-06 | 節點類型選擇：Output / Input | 高 | 已實作 |
| F-GUI-07 | Hi / Lo 依賴分開設定，支援反相與 High/Low 常數 | 高 | 已實作 |
| F-GUI-08 | 節點可透過滑鼠拖拉調整順序 | 高 | 已實作 |
| F-GUI-09 | 儲存 JSON 時不驗證，即使有循環依賴等問題也能存檔 | 高 | 已實作 |
| F-GUI-10 | 套用節點時僅更新該節點，保留其他節點已設定的依賴 | 高 | 已實作 |
| F-GUI-11 | 載入 JSON 時，pulses 列表正確顯示 | 高 | 已實作 |
| F-GUI-12 | GUI 介面使用英文 | 高 | 已實作 |

### 2.2 節點類型

| 編號 | 需求描述 | 優先級 | 狀態 |
|------|----------|--------|------|
| F-NODE-01 | **output**：僅輸出，可設 Hi/Lo 依賴、CYCLE | 高 | 已實作 |
| F-NODE-02 | **input**：僅輸入，供其他節點依賴，無依賴與 CYCLE | 高 | 已實作 |
| F-NODE-03 | **input Debounce**：input 可啟用 DEB，設定 INIT、CYCLE_HI、CYCLE_LO、Pulse | 高 | 已實作 |

### 2.3 依賴與時序

| 編號 | 需求描述 | 優先級 | 狀態 |
|------|----------|--------|------|
| F-DEP-01 | Hi 依賴（iHi）與 Lo 依賴（iLo）分開設定 | 高 | 已實作 |
| F-DEP-02 | 支援 __HIGH__ / __LOW__ 常數作為依賴 | 高 | 已實作 |
| F-DEP-03 | 依賴項可設反相（inverted） | 高 | 已實作 |
| F-DEP-04 | 依賴 Output 時使用其輸出 | 高 | 已實作 |
| F-DEP-05 | 依賴 Input 時使用其輸入（有 Debounce 時使用 xxx_deb） | 高 | 已實作 |
| F-DEP-06 | 無 Hi 依賴時 iHi 接 1'b1；無 Lo 依賴時 iLo 接 1'b0 | 高 | 已實作 |
| F-DEP-07 | 可以選擇其它節點的依賴來使用 | 高 | 已實作 |
| F-DEP-08 | 依賴分組, group內使用&, 然後使用"||"將所有group整合起來 | 高 | 已實作 |

### 2.4 驗證

| 編號 | 需求描述 | 優先級 | 狀態 |
|------|----------|--------|------|
| F-VAL-01 | 檢查節點名稱重複 | 高 | 已實作 |
| F-VAL-02 | 檢查依賴的節點是否存在 | 高 | 已實作 |
| F-VAL-03 | 檢查循環依賴（Hi 與 Lo 分開檢查） | 高 | 已實作 |

### 2.5 Verilog 輸出

| 編號 | 需求描述 | 優先級 | 狀態 |
|------|----------|--------|------|
| F-VER-01 | 參考 x15_pseq.v 格式（區塊、註解、對齊） | 高 | 已實作 |
| F-VER-02 | PSEQCELL、DEB 每個實例寫在同一行 | 高 | 已實作 |
| F-VER-07 | PSEQCELL 實例之間不跳行（連續排列） | 高 | 已實作 |
| F-VER-03 | Pulse 由 IO 輸入，每 pulse 單一訊號（如 iPulse_1us） | 高 | 已實作 |
| F-VER-04 | Include guard（`ifndef / `define / `endif），依檔名產生 guard 與 module name | 中 | 已實作 |
| F-VER-05 | IO port 依節點順序產生，pulse 放在節點前，所有 pulse 單行宣告 | 高 | 已實作 |
| F-VER-06 | 內部依賴訊號全小寫，_hi、_lo 放在變數後面（如 sig_2_hi、sig_2_lo） | 高 | 已實作 |

---

## 三、非功能需求

### 3.1 效能

| 編號 | 需求描述 | 優先級 | 狀態 |
|------|----------|--------|------|
| NF-01 | GUI 啟動時間 < 5 秒 | 中 |  |
| NF-02 | 產生 Verilog 時間 < 1 秒（100 節點內） | 中 |  |

### 3.2 相容性

| 編號 | 需求描述 | 優先級 | 狀態 |
|------|----------|--------|------|
| NF-03 | Python 3.8 以上 | 高 | 已實作 |
| NF-04 | 舊版 JSON 可載入（signal/external/power_rail 等舊格式） | 高 | 已實作 |

### 3.3 使用性

| 編號 | 需求描述 | 優先級 | 狀態 |
|------|----------|--------|------|
| NF-05 | 提供操作說明文件 | 高 | 已實作 |

---

## 四、待開發 / 待討論需求

| 編號 | 需求描述 |
|------|----------|
| ~~TBD-01~~ | ~~支援 per-rail 的 iPulse~~ → 已實作：可新增 Pulse、每節點 Hi/Lo/Force 可選不同 pulse |
| TBD-02 | 支援 WIDTH > 1（多 bit 輸出） |
| TBD-03 | 視覺化依賴圖 |
| TBD-04 | 匯出 CSV 格式 |

---

## 五、資料格式

### 5.1 Config 層級

- `pulses`：Pulse 來源列表，每個為單一訊號（無 _Hi/_Lo/_Force 後綴）。如 `["iPulse_1us", "iPulse_1ms"]` 對應模組輸入，Verilog 中單行宣告：`input iPulse_1us, iPulse_1ms,`

### 5.2 JSON 節點格式

```json
{
  "name": "node_name",
  "seq_type": "Output | Input",
  "depends_on_hi": ["dep1", "__HIGH__"],
  "depends_on_lo": ["dep2"],
  "depends_on_hi_inv": {"dep1": false},
  "depends_on_lo_inv": {},
  "depends_on_hi_use": {"dep1": "self"},
  "depends_on_lo_use": {},
  "depends_on_hi_groups": [["dep1", "__HIGH__"]],
  "depends_on_lo_groups": [["dep2"]],
  "pulse_hi": "iPulse_1us",
  "pulse_lo": "iPulse_1us",
  "pulse_force": "iPulse_1us",
  "deb_enable": false,
  "deb_init": 0,
  "deb_cycle_hi": 2,
  "deb_cycle_lo": 2,
  "deb_cycle_sync": 2,
  "deb_pulse": "iPulse_1us",
  "cycle_hi": 8,
  "cycle_lo": 4,
  "cycle_force": 2,
  "recover": 3,
  "init": 0,
  "force_val": 0,
  "cycle_sync": 0,
  "od": 0
}
```

- `seq_type`：`"Output"` 或 `"Input"`
- `depends_on_hi` / `depends_on_lo`：iHi / iLo 依賴，可含 `"__HIGH__"`、`"__LOW__"`
- `depends_on_hi_inv` / `depends_on_lo_inv`：依賴項是否反相
- `depends_on_hi_use` / `depends_on_lo_use`：`"self"`=節點本身、`"hi"`=該節點 iHi、`"lo"`=該節點 iLo（僅 output 可選 hi/lo）
- `depends_on_hi_groups` / `depends_on_lo_groups`：依賴分組（F-DEP-08），組內 AND、組間 OR
- `pulse_hi` / `pulse_lo` / `pulse_force`：該節點使用的 pulse（對應 config `pulses`）
- `deb_enable` / `deb_init` / `deb_cycle_hi` / `deb_cycle_lo` / `deb_cycle_sync` / `deb_pulse`：input 專用，DEB 模組參數

### 5.3 Verilog 檔名與模組命名（F-VER-04）

- **依檔名產生**：產生 Verilog 時依儲存檔名自動產生 module name 與 include guard
- **module name**：檔名（不含 .v），將 `.`、`-`、空格替換為 `_`（如 `my_pwrseq.v` → `my_pwrseq`）
- **include guard**：上述名稱大寫 + `_V` 後綴（如 `my_pwrseq.v` → `MY_PWRSEQ_V`）
- 若未指定檔名（如 CLI 直接輸出），則使用 config 的 `module_name`

### 5.4 Verilog 埠命名與順序

- **Port 順序**：iRst → iClk_Core → pulses（單行）→ 節點（依 config.rails 順序）→ iForce
- **埠命名**：output 用 oXXX，input 用 iXXX

| 類型 | 輸出 | 輸入 |
|------|------|------|
| output | oXXX | - |
| input | - | iXXX |

### 5.5 Verilog 內部訊號命名

- **全小寫**，`_hi`、`_lo` 放在變數後面
- 輸出：`{name_lower}`（如 sig_2）
- Hi/Lo 條件：`{name_lower}_hi`、`{name_lower}_lo`（如 sig_2_hi、sig_2_lo）
- Debounce：`{name_lower}_deb`（如 sig_1_deb）

---

## 六、設計說明（供功能增減參考）

| 項目 | 說明 |
|------|------|
| 循環依賴 | Hi 與 Lo 分開檢查。iHi 決定上電順序，iLo 決定關電順序。例如 A iHi 依賴 B、B iLo 依賴 A 不成立環（狀態不同）。|
| 儲存行為 | 儲存 JSON 不驗證，允許有問題時仍可存檔。產生 Verilog 時才驗證。|
| 節點順序 | 左側列表順序可拖拉調整，影響編輯區顯示與 Verilog port 順序、拓撲排序。|
| 套用行為 | 套用時僅更新該節點，其他節點保留 config 既有資料，避免依賴遺失。|
| Input Debounce | input 啟用 deb_enable 時，使用 DEB 模組產生 xxx_deb 訊號，其他節點依賴時使用 debounced 訊號。|
| 相關檔案 | config_models.py、validator.py、verilog_generator.py、gui.py |

---

## 七、變更記錄

| 日期 | 變更內容 |
|------|----------|
| 2025-02-28 | 節點類型：Output / Input；依賴：Hi/Lo 分開、__HIGH__/__LOW__、反相 |
| 2025-02-28 | 循環依賴：Hi/Lo 分開檢查；儲存 JSON 不驗證；拖拉調整順序；Verilog 埠 oXXX/iXXX |
| 2025-02-28 | F-DEP-07：可選擇其它節點的 Hi/Lo 依賴來使用（depends_on_hi_use、depends_on_lo_use） |
| 2025-02-28 | F-DEP-08：依賴分組（depends_on_hi_groups、depends_on_lo_groups），組內 &、組間 \| |
| 2025-02-28 | Pulse 選項：可新增 Pulse 來源，每節點 Hi/Lo/Force 可選不同 pulse（pulses、pulse_hi、pulse_lo、pulse_force） |
| 2025-02-28 | Pulse 改為單一訊號：每個 pulse 僅一個模組輸入（如 iPulse_1us），無 _Hi/_Lo/_Force 後綴；預設 iPulse_1us |
| 2025-02-28 | Input Debounce：deb_enable、deb_init、deb_cycle_hi、deb_cycle_lo、deb_pulse；使用 DEB 模組，每實例一行 |
| 2025-02-28 | Verilog IO port：依節點順序、pulse 放節點前、pulse 單行宣告 |
| 2025-02-28 | Verilog 內部訊號：全小寫，_hi/_lo 放變數後（sig_2_hi、sig_2_lo） |
| 2025-02-28 | GUI：套用僅更新該節點保留其他依賴；載入 JSON 時刷新 pulse 列表；介面改為英文 |
| 2025-02-28 | 移除 always_on：自 config、Verilog、JSON 格式完全移除 |
| 2025-02-28 | F-VER-07：PSEQCELL 實例之間不跳行，連續排列 |
| 2025-03-02 | F-VER-04 補充：產生 Verilog 時依檔名產生 `ifndef/`define guard 與 module name（如 my_pwrseq.v → MY_PWRSEQ_V、module my_pwrseq） |
